Feat: 지갑 등록